# ceed_benchmarks_dealii

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: indentation.yml
benchmark_detail/: CMakeLists.txt  bench.cc
bk5/: CMakeLists.txt  bench.cc
bp1/: CMakeLists.txt  bench.cc  bench_mass.cc  curved_manifold.h
bp1/gnuplot/: matvec_bdw.eps  node1.eps  node1_time.eps  node256.eps  node256_cart.eps  p6_q8.eps  plot.gpl
bp2/: CMakeLists.txt  bench.cc  bench_mass.cc
bp3/: CMakeLists.txt  bench.cc  bench_poisson.cc
bp3/gnuplot/: matvec_bdw.eps  matvec_coefficients.eps  matvec_coefficients_ht.eps  matvec_coefficients_p8.eps  plot.gpl
bp4/: CMakeLists.txt  bench.cc
bp4_system/: CMakeLists.txt  bench.cc
bp5/: CMakeLists.txt  bench.cc
bp5/gnuplot/: bp5_bdw.eps  bp5_skx.eps  matvec_bdw.eps  matvec_skx.eps  plot.gpl
bp6/: CMakeLists.txt  bench.cc  bench_poisson.cc
bps5/: CMakeLists.txt  multigrid_cg.cc
bps5_e-vector/: CMakeLists.txt  multigrid_cg.cc
common_code/: create_triangulation.h  curved_manifold.h  diagonal_matrix_blocked.h  kershaw.h  mass_operator.h  poisson_operator.h  renumber_dofs_for_mf.h  solver_cg_optimized.h  vector_access_reduced.h
sm-update/: CMakeLists.txt
sm-update-1/: CMakeLists.txt  bench.cc
sm-update-2/: CMakeLists.txt  bench.cc
sm-util/: mpi.h  timers.h
